--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +14,7 @@
         <div class="instagram-continue">
             <div class="group">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpeg" alt="foto de perfil">
-                </div>
+                <div class="profile-photo"></div>
                 <a href="#" class="instagram-login">Continue como samuelrvj</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
@@ -31,8 +29,12 @@
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo</p>
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download">
+                        <img src="./img/apple-button.png" alt="">
+                    </a>
+                    <a href="#" class="app-download">
+                        <img src="./img/googleplay-button.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
